ImagemDAO, metodo criado em AutenticacaoDAO, atualizacao em webservice empresa